<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/myFeedsFragment">

    <fragment
        android:id="@+id/addNewFeedFragment"
        android:name="com.rssreader.ui.addChannel.AddNewChannelFragment"
        android:label="@string/add_new_channel"
        tools:layout="@layout/fragment_add_new_channel" />
    <fragment
        android:id="@+id/myFeedsFragment"
        android:name="com.rssreader.ui.channels.MyChannelsFragment"
        android:label="@string/my_channels"
        tools:layout="@layout/fragment_my_channels" >

    </fragment>
    <fragment
        android:id="@+id/feedItemDescriptionFragment"
        android:name="com.rssreader.ui.itemdescription.FeedItemDescriptionFragment"
        android:label="@string/item_description"
        tools:layout="@layout/fragment_feed_item_description" />
    <fragment
        android:id="@+id/rssFeedFragment"
        android:name="com.rssreader.ui.feed.RssFeedFragment"
        android:label="@string/rss_feed"
        tools:layout="@layout/fragment_rss_feed" />

    <action
        android:id="@+id/action_add_feed"
        app:destination="@id/addNewFeedFragment" />
</navigation>