<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".layman.ui.addChannel.AddNewChannelFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_new_channel_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_12dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dimen_12dp" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:tint="?attr/colorOnSurface"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toStartOf="@id/add_channel_title"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_channel_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:text="@string/add_new_channel_via_url"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintBottom_toBottomOf="@id/close"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/close"
                app:layout_constraintTop_toTopOf="@id/close" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/dimen_12dp"
                android:hint="@string/enter_url"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/add_channel_title"
                app:prefixText="@string/https_prefix">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_url"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:text="@string/add_new_channel"
                android:id="@+id/add_new_channel_button"
                android:textAppearance="?attr/textAppearanceButton"
                app:layout_constraintTop_toBottomOf="@id/textField_url" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>